--- a/template.sty
+++ b/template.sty
@@ -167,7 +167,7 @@
 
 \newtheorem{axiom}{Axiom}
 
-\newenvironment{solution}[1][Solution]{\proof[#1]\mbox{}\*}{\endproof}
+\newenvironment{solution}[1][Solution]{\proof[#1]\mbox{}\\*}{\endproof}
 \newenvironment{solutionF}[1][Solution]{\proof[#1]\mbox{}}{\endproof}
 
 \newenvironment{proofcase}[1]{\proof[Case #1]\mbox{}}{\endproof}
