--- a/Calculus and Differential Equations.tex
+++ b/Calculus and Differential Equations.tex
@@ -57,7 +57,7 @@
 \tableofcontents
 \newpage
 
-\section{Integration}
+\section{Integration Techniques}
 \subsection{Derivatives}
 Let $a\in\mathbb{R}$ be a constant.
 \begin{table}[H]
@@ -104,12 +104,12 @@ Let $a\in\mathbb{R}$ be a constant.
         \toprule
             f & \dv{f}{x} \\
         \midrule
-            \sinh{\left( ax \right)} &  a\cosh{\left( ax \right)} \\
-            \cosh{\left( ax \right)} &  a\sinh{\left( ax \right)} \\
-            \tanh{\left( ax \right)} &  a\sech^2{\left( ax \right)} \\
-            \coth{\left( ax \right)} & -a\csch^2{\left( ax \right)} \\
-            \sech{\left( ax \right)} & -a\sech{\left( ax \right)}\tan{\left( ax \right)} \\
-            \csch{\left( ax \right)} & -a\csch{\left( ax \right)}\cot{\left( ax \right)} \\
+            \arcsin{\left( ax \right)} &  \frac{a}{\sqrt{1-a^2x^2}} \\
+            \arccos{\left( ax \right)} & -\frac{a}{\sqrt{1-a^2x^2}} \\
+            \arctan{\left( ax \right)} &  \frac{a}{1+a^2x^2} \\
+            \arccot{\left( ax \right)} & -\frac{a}{1+a^2x^2} \\
+            \arcsec{\left( ax \right)} &  \frac{1}{x\sqrt{a^2x^2 - 1}} \\
+            \arccsc{\left( ax \right)} & -\frac{1}{x\sqrt{a^2x^2 - 1}} \\
         \bottomrule
     \end{tabular}
     \caption{Trigonometric Function Derivatives}
@@ -121,12 +121,12 @@ Let $a\in\mathbb{R}$ be a constant.
         \toprule
             f & \dv{f}{x} \\
         \midrule
-            \arcsin{\left( ax \right)} &  \frac{a}{\sqrt{1-a^2x^2}} \\
-            \arccos{\left( ax \right)} & -\frac{a}{\sqrt{1-a^2x^2}} \\
-            \arctan{\left( ax \right)} &  \frac{a}{1+a^2x^2} \\
-            \arccot{\left( ax \right)} & -\frac{a}{1+a^2x^2} \\
-            \arcsec{\left( ax \right)} &  \frac{1}{x\sqrt{a^2x^2 - 1}} \\
-            \arccsc{\left( ax \right)} & -\frac{1}{x\sqrt{a^2x^2 - 1}} \\
+            \sinh{\left( ax \right)} &  a\cosh{\left( ax \right)} \\
+            \cosh{\left( ax \right)} &  a\sinh{\left( ax \right)} \\
+            \tanh{\left( ax \right)} &  a\sech^2{\left( ax \right)} \\
+            \coth{\left( ax \right)} & -a\csch^2{\left( ax \right)} \\
+            \sech{\left( ax \right)} & -a\sech{\left( ax \right)}\tan{\left( ax \right)} \\
+            \csch{\left( ax \right)} & -a\csch{\left( ax \right)}\cot{\left( ax \right)} \\
         \bottomrule
     \end{tabular}
     \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
@@ -141,7 +141,7 @@ Let $a\in\mathbb{R}$ be a constant.
             \arccsch{\left( ax \right)} & -\frac{1}{ax^2\sqrt{1+\frac{1}{a^2x^2}}} \\
         \bottomrule
     \end{tabular}
-    \caption{Inverse Trigonometric Function Derivatives}
+    \caption{Hyperbolic Function Derivatives}
 \end{table}
 \subsection{Partial Fractions}
 \begin{definition}[Partial Fraction Decomposition]
@@ -179,38 +179,116 @@ Let $a\in\mathbb{R}$ be a constant.
 \subsection{Integration by Substitution}
 \begin{theorem}
     \begin{equation*}
-        \int f\left(g\left( x \right)\right)\dv{g(x)}{x} \dd{x} = \int f(u) \dd{u}, \: \text{where } u = g(x)
+        \int f\bigl(g\left( x \right)\bigr)\dv{g(x)}{x} \dd{x} = \int f(u) \dd{u}, \: \text{where } u = g(x)
     \end{equation*}
 \end{theorem}
-\subsection{Trigonometric Identities}
-\begin{equation*}
-    \sin^2{\left( \theta \right)} + \cos^2{\left( \theta \right)} = 1
-\end{equation*}
-\begin{equation*}
-    \tan^2{\left( \theta \right)} + 1 = \sec^2{\left( \theta \right)}
-\end{equation*}
-\begin{equation*}
-    1 + \cot^2{\left( \theta \right)} = \csc^2{\left( \theta \right)}
-\end{equation*}
-
 \subsection{Trigonometric Substitutions}
 \begin{table}[H]
     \centering
-    \begin{tabular}{c | c | }
+    \begin{tabular}{>{$}c<{$} | >{$}c<{$} >{$}c<{$} | >{$}c<{$}}
         \toprule
-        
+        \text{Form} & \text{Substitution} & \text{Result} & \text{Domain} \\ 
         \midrule
-        
+        \left(a^2-b^2x^2\right)^n & x=\frac{a}{b}\sin{\left( \theta \right)} & a^2\cos^2{\left( \theta \right)} & \theta\in \left[ -\frac{\pi}{2},\: \frac{\pi}{2} \right] \\
+        \left(a^2+b^2x^2\right)^n & x=\frac{a}{b}\tan{\left( \theta \right)} & a^2\sec^2{\left( \theta \right)} & \theta\in \left( -\frac{\pi}{2},\: \frac{\pi}{2} \right) \\
+        \left(b^2x^2-a^2\right)^n & x=\frac{a}{b}\sec{\left( \theta \right)} & a^2\tan^2{\left( \theta \right)} & \theta\in \left[ 0,\: \frac{\pi}{2} \right) \cup \left(\frac{\pi}{2},\: \pi\right] \\
         \bottomrule
     \end{tabular}
-    % \caption{}
-    % \label{}
+    \caption{Trigonometric substitutions for various forms.}
 \end{table}
 \newpage
 \section{Limits, Continuity and Differentiability}
+\subsection{Limits}
+\begin{theorem}[Limits]
+    $\displaystyle\lim_{x\to x_0} f(x)$ exists if and only if
+    $\displaystyle\lim_{x\to {x_0}^+} f(x)$ and $\displaystyle\lim_{x\to {x_0}^-} f(x)$
+    exist and are equal.
 
+    \noindent For $f:S\to T$,
+    \begin{equation*}
+        I\subseteq S:\exists L\in I:\lim_{x\to x_0} f(x) = L \iff \lim_{x\to x_0^+} f(x) = \lim_{x\to x_0^-} f(x) = L
+    \end{equation*}
+\end{theorem}
+\begin{theorem}[L'H\^opital's Rule]
+    For two differentiable functions $f(x)$ and $g(x)$.
+    If $\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0$,
+    or $\displaystyle \lim_{x\to x_0}f(x)=\displaystyle \lim_{x\to x_0}g(x)=\pm\infty$,
+    then
+    $\lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}$
+    (as long as the limit exists, or diverges to $\pm\infty$).
+    % \begin{equation*}
+    %     \lim_{x\to x_0} f(x) = \lim_{x\to x_0} g(x) = 0 \lor \lim_{x\to x_0} f(x) = \lim_{x\to x_0} g(x) = \pm \infty \implies \lim_{x\to x_0} \frac{f(x)}{g(x)} = \lim_{x\to x_0} \frac{f'(x)}{g'(x)}
+    % \end{equation*}
+\end{theorem}
+\begin{theorem}[Continuity at a Point]
+    $f(x)$ is continuous at $c$ iff $\displaystyle \lim_{x\to c} f(x) = f(c)$.
+\end{theorem}
+\begin{theorem}[Continuity over an Interval]
+    $f(x)$ is continuous on $I$ if $f(x)$ is continuous for all $x\in I$.
+\begin{itemize}
+    \item $f(x)$ is continuous on $I:\left( a,\:b \right)$ if it is continuous for all $x\in I$.
+    \item $f(x)$ is continuous on $I:\left[ a,\:b \right]$ if it is continuous for all $x\in I$, but only right continuous at $a$ and left continuous at $b$.
+\end{itemize}
+    If $f(x)$  is continuous on $\left(-\infty,\:\infty\right)$, $f(x)$ is continuos everywhere.
+\end{theorem}
+\begin{theorem}[Intermediate Value Theorem]
+    If $f(x)$ is continuous on $I:\left[ a, \: b \right]$ and $c$ is any number between $f(a)$ and $f(b)$, inclusive, then there exists an $x\in I$ such that $f(x)=c$.
+\end{theorem}
+\begin{theorem}[Differentiability]
+    $f(x)$ is differentiable at $x=x_0$ iff
+    \begin{equation*}
+        \lim_{x\to x_0} \frac{f(x)-f(x_0)}{x-x_0}
+    \end{equation*}
+    exists. When this limit exists, it defines the derivative
+    \begin{equation*}
+        \lim_{h\to 0} \frac{f(x_0+h)-f(x_0)}{h}
+    \end{equation*}
+\end{theorem}
+\begin{theorem}
+    $f(x)$ is differentiable on $I$ if $f(x)$ is differentiable for all $x_0\in I$.
+\end{theorem}
+\begin{theorem}
+    Differentiability implies continuity.
+\end{theorem}
+\begin{theorem}[Mean Value Theorem]
+    If $f(x)$ is continuous on $I:\left[ a,\:b \right]$ and differentiable on $I$, then there exists a point $x_0\in I$ such that
+    \begin{equation*}
+        f'(x_0)=\frac{f(b)-f(a)}{b-a}
+    \end{equation*}
+\end{theorem}
 \newpage
 \section{Definite Integrals}
+\begin{theorem} 
+    If $f(x)$ is continuous on an interval $I:\left[ a,\:b \right]$, then the net signed area $A$ between the graph of $f(x)$ and the interval $I$ is
+    \begin{equation*}
+        A = \int_a^b f(x) \dd{x} 
+    \end{equation*} 
+\end{theorem}
+Properties of Definite Integrals:
+\
+\subsection{Reimann Sums}
+\begin{theorem}
+    Let $A$ be the area under $f(x)$ on the interval $\left[ a,\:b \right]$, then
+    \begin{equation*}
+        \int_a^b f(x) \dd{x} = \lim_{\max{\Delta x_k}\to 0} \sum_{k=1}^n f(x_k) \Delta x_k
+    \end{equation*}
+    where $n$ is the number of rectangles, $x_k$ is the centre of the rectangle $k$, and $\Delta x_k$ is the width of the rectangle $k$. If every rectangle has the same width, then
+    \begin{equation*}
+        \Delta x_k = \frac{b-a}{n}
+    \end{equation*}
+\end{theorem}
+\begin{theorem}[The Fundamental Theorem of Calculus: Part 1]
+    If $f(x)$ is continuous on $\left[ a,\:b \right]$ and $F$ is any antiderivative of $f$ on $\left[ a,\:b \right]$ then
+    \begin{equation*}
+        \int_a^b f(x)\dd{x} = F(b) - F(b)
+    \end{equation*}
+\end{theorem}
+\begin{theorem}[The Fundamental Theorem of Calculus: Part 2]
+    If $f(x)$ is continuous on $I$ then it has an antiderivative on $I$.
+    \begin{equation*}
+        \int_a^b f(x)\dd{x} = F(b) - F(b)
+    \end{equation*}
+\end{theorem}
 \newpage
 \section{Taylor and Maclaurin Series}
 \newpage
